PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 20?? PHP 5.4.37
- CGI:
  . Fix bug #68618 (out of bounds read crashes php-cgi). (Stas)

18 Dec 2014 PHP 5.4.36

- Core:
  . Upgraded crypt_blowfish to version 1.3. (Leigh)
  . Fixed bug #68545 (NULL pointer dereference in unserialize.c). (Anatol)
  . Fixed bug #68594 (Use after free vulnerability in unserialize()).
    (CVE-2014-8142) (Stefan Esser)

- Mcrypt:
  . Fixed possible read after end of buffer and use after free. (Dmitry)

13 Nov 2014 PHP 5.4.35

- Core:
  . Fixed bug #68365 (zend_mm_heap corrupted after memory overflow in
    zend_hash_copy). (Dmitry)

- Fileinfo:
  . Fixed bug #68283 (fileinfo: out-of-bounds read in elf note headers).
    (CVE-2014-3710) (Remi)

- GMP:
 . Fixed bug #63595 (GMP memory management conflicts with other libraries
   using GMP). (Remi)

- PDO_pgsql:
  . Fixed bug #66584 (Segmentation fault on statement deallocation) (Matteo)

16 Oct 2014, PHP 5.4.34

- Fileinfo:
  . Fixed bug #66242 (libmagic: don't assume char is signed). (ArdB)

- Core:
  . Fixed bug #67985 (Incorrect last used array index copied to new array after
    unset). (Tjerk)
  . Fixed bug #68044 (Integer overflow in unserialize() (32-bits only)). 
    (CVE-2014-3669) (Stas)

- cURL:
  . Fixed bug #68089 (NULL byte injection - cURL lib). (Stas)

- EXIF:
  . Fixed bug #68113 (Heap corruption in exif_thumbnail()). (CVE-2014-3670)
    (Stas)

- OpenSSL:
  . Reverted fixes for bug #41631, due to regressions. (Stas) 

- XMLRPC:
  . Fixed bug #68027 (Global buffer overflow in mkgmtime() function). 
    (CVE-2014-3668) (Stas)

18 Sep 2014, PHP 5.4.33

- Core:
  . Fixed bug #47358 (glob returns error, should be empty array()). (Pierre)
  . Fixed bug #65463 (SIGSEGV during zend_shutdown()). (Keyur Govande)
  . Fixed bug #66036 (Crash on SIGTERM in apache process). (Keyur Govande)

- OpenSSL: